--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.3.1",
     "vue": "^3.0.0"
+  },
+  "rules":{
+    "no-unused-vars": "off"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
